--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Willkommen beim Support von Shoot the Shapes</h1>
   <p>Vielen Dank, dass du unser Spiel spielst!</p>
-  <p>Bei Fragen oder Problemen kannst du uns per E-Mail kontaktieren: <strong>deinname@email.de</strong></p>
+  <p>Bei Fragen oder Problemen kannst du uns per E-Mail kontaktieren: <strong>apple-dev@magnani.org</strong></p>
   <p>Wir helfen dir gerne weiter.</p>
 </body>
 </html>
